2010-03-01  Abel Cheung  <abelcheung@gmail.com>

	* scorerender-class.php:
	- Adds $imagick_ver for storing detected ImageMagick version
	- (is_web_hosting) Fix return value.
	- (is_prog_usable) Overhaul of func, returns WP_Error on error
	  instead of boolean, adds minimum program version checking,
	  checks regular expression instead of strings in command output,
	  and optionally writes detected program version into another var.
	* notation/{abc,mup,lilypond,pmw}.php:
	- (is_notation_usable) Adopt the change in is_prog_usable().
	* scorerender-admin.php:
	- (update_options) Adopt the change in is_prog_usable(), prints
	  extra error message returned by is_prog_usable().

2010-02-27  Abel Cheung  <abelcheung@gmail.com>

	* scorerender-admin.php:
	- Better error handling and make use of WP_Error.

2010-02-27  Abel Cheung  <abelcheung@gmail.com>

	* notation/mup.php, wp-scorerender.php, scorerender-admin.php:
	- Drop DPI definition which is not widely used.
	* scorerender-admin.php:
	- Sets minimum score width to 100px instead.

2010-02-27  Abel Cheung  <abelcheung@gmail.com>

	* misc/tint-image.php:
	- Always log via error_log() instead of writing custom file.
	- Fix a bug where cache dir setting is not retrieved if color
	  is given via URL (thus image not found).
	  
2010-02-26  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php (scorerender_get_def_settings):
	- Make default setting static, so it can be reused later.
	
2010-02-26  Abel Cheung  <abelcheung@gmail.com>

	* scorerender-class.php (format_error_msg):
	- Make this func public, it can be useful even when outside class.
	* wp-scorerender.php:
	- Use it globally.

2010-02-26  Abel Cheung  <abelcheung@gmail.com>

	* scorerender-admin.php:
	- (update_options): Fix incorrect parenthesis enclosing.
	- (admin_page): More elaborate help, also explaning new shortcode

2010-02-26  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php:
	- (scorerender_shortcode_handler) Also checks existance of GD